# bilhr

./: .gitignore  CMakeLists.txt  central_node.cpp  contributors.txt  goalstate_node.cpp  mlp.h  package.xml  reinforcementlearning_node.cpp
documentation/: Doxyfile
documentation/html/: annotated.html  class_c_m_a_c-members.html  class_c_m_a_c.html  class_m_l_p-members.html  class_m_l_p.html  classes.html  cmac_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  mlp_8h_source.html  robot__config_8h_source.html
documentation/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_3.js  (+2 more)
documentation/latex/: annotated.tex  class_c_m_a_c.tex  class_m_l_p.tex  refman.tex
launch/: start.launch
src/: central_node.cpp  cmac.cpp  cmac.h  goalstate_node.cpp  keyboard_node.cpp  mlp.cpp  mlp.h  mlp.hpp  moveleg_node.cpp  reinforcementlearning_node.cpp  robot_config.h  waving_node.cpp
src/aruco-2.0.6/: CMakeLists.txt  ChangeLog
task4/: data.txt
tasks/: data.txt  task3.txt  weights.txt
test/: .gitignore  CMakeLists.txt  test_cmac.cpp  test_mlp.cpp  test_rl.cpp
tutorials/: eval_mse.m
tutorials/tutorial3/: task2.cpp  task2.txt  task2_plot.fig  task3.cpp  task3.txt  task3_plot.fig
tutorials/tutorial4/: task2_case_a_rf3.fig  task2_case_a_rf3.txt  task2_case_a_rf5.fig  task2_case_a_rf5.txt  task2_case_b_rf3.fig  task2_case_b_rf3.txt  task2_case_b_rf5.fig  task2_case_b_rf5.txt  task4.txt  task_4_train.fig
(+5 files in other folders)
